--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,10 +19,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/react-table": "^8.19.2",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.6",
     "lucide-react": "^0.400.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
